--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-cookie": "^2.2.0",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.4.1",
+    "react-markdown": "^3.3.4",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
-    "react-transition-group": "^2.4.0"
+    "react-transition-group": "^2.4.0",
+    "typed-react-markdown": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
